--- a/index.html
+++ b/index.html
@@ -1,307 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Aradhya 🎉</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>BMW Birthday Gift</title>
+
 <style>
-/* Reset */
-* { box-sizing: border-box; margin:0; padding:0; font-family:'Poppins',sans-serif; }
+*{margin:0;padding:0;box-sizing:border-box;}
 
-/* Body */
 body{
-  background: linear-gradient(180deg, #ffd6e8, #fff);
-  min-height:100vh;
-  overflow:hidden;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-
-/* Container */
-.app{
-  width:100%;
-  max-width:420px;
-  height:100vh;
-  position:relative;
+  font-family:Poppins,sans-serif;
   text-align:center;
-  padding:20px;
-}
-
-/* Pages */
-.screen{
-  display:none;
-  animation:fade 0.5s ease;
-}
-.screen.active{ display:block; }
-
-h1{ color:#ff3f8e; font-size:2rem; margin:20px 0 10px;}
-p{ color:#333; font-size:1rem; margin:10px 0;}
-.btn{
-  margin-top:20px;
-  padding:12px 30px;
-  border:none;
-  border-radius:30px;
-  background:#ff3f8e;
   color:white;
-  font-size:1rem;
-  cursor:pointer;
-  box-shadow:0 10px 25px rgba(255,63,142,0.35);
+  overflow-x:hidden;
+  background:linear-gradient(120deg,#000,#0011ff,#7a00ff);
+  background-size:400% 400%;
+  animation:bgMove 12s infinite alternate;
 }
 
-/* Fade animation */
-@keyframes fade{ from{opacity:0; transform:scale(0.95);} to{opacity:1; transform:scale(1);} }
+@keyframes bgMove{
+  0%{background-position:left;}
+  100%{background-position:right;}
+}
 
-/* Cake */
-.cake{
-  width:160px;
-  height:120px;
-  background:#ff9fc9;
-  margin:20px auto;
-  border-radius:12px;
-  position:relative;
-}
-.cake::before{
-  content:'';
-  position:absolute;
-  width:120px;
-  height:20px;
-  background:#ffe3ef;
-  top:-18px; left:20px;
-  border-radius:10px;
-}
-.candle{
-  width:10px;
-  height:35px;
-  background:white;
-  position:absolute;
-  top:-50px;
-  left:75px;
-  cursor:pointer;
-}
-.flame{
-  width:14px;
-  height:14px;
-  background:orange;
-  border-radius:50%;
-  position:absolute;
-  top:-14px; left:-2px;
-  animation:flicker 0.8s infinite alternate;
-}
-@keyframes flicker{ from{opacity:1;} to{opacity:0.6;} }
-
-/* Balloons */
-.balloon{
-  position:absolute;
-  bottom:-100px;
-  width:55px; height:70px;
-  border-radius:50%;
-  animation:float linear forwards;
-  cursor:pointer;
-}
-.balloon::after{
-  content:'';
-  position:absolute;
-  width:2px; height:30px;
-  background:#aaa; left:50%; top:70px;
-}
-@keyframes float{ from{transform:translateY(0);} to{transform:translateY(-120vh);} }
-
-/* Words after pop */
-.word{
-  position:absolute;
-  color:#ff3f8e;
-  font-weight:600;
-  font-size:1.2rem;
-  animation:popText 1s ease forwards;
-}
-@keyframes popText{ from{opacity:0; transform:scale(0.5);} to{opacity:1; transform:scale(1);} }
-
-/* Envelope */
-.envelope{
-  width:150px; height:100px;
-  margin:40px auto;
-  background:#fff;
-  border:3px solid #ff3f8e;
-  border-radius:10px;
-  position:relative;
-  cursor:pointer;
-  box-shadow:0 10px 20px rgba(255,63,142,0.3);
-  transition:0.3s;
-}
-.envelope.open{
-  transform:rotateX(180deg);
-}
-.envelope::before{
-  content:'';
-  position:absolute;
-  width:0; height:0;
-  border-left:75px solid transparent;
-  border-right:75px solid transparent;
-  border-bottom:50px solid #ff3f8e;
-  top:0; left:0;
-  border-radius:0;
-}
-.envelope p{
-  position:absolute;
-  top:50%; left:50%;
-  transform:translate(-50%,-50%);
-  color:#ff3f8e;
-  font-weight:600;
+.page{
   display:none;
+  min-height:100vh;
+  padding:60px 15px;
 }
 
-/* Celebration Fireworks & hearts */
+.active{display:block;}
+
+h1{font-size:clamp(22px,5vw,40px);}
+p{font-size:clamp(14px,3vw,18px);opacity:0.9;}
+
+button{
+  padding:14px 18px;
+  margin:12px;
+  border:none;
+  border-radius:14px;
+  width:90%;
+  max-width:340px;
+  font-size:16px;
+  cursor:pointer;
+  background:rgba(255,255,255,0.2);
+  color:white;
+  border:2px solid white;
+}
+
+button:hover{
+  background:white;
+  color:black;
+}
+
+/* Gift Image */
+.giftImg{
+  width:110px;
+  margin:25px auto;
+  animation:bounce 1.5s infinite;
+  cursor:pointer;
+}
+
+@keyframes bounce{
+  0%,100%{transform:translateY(0);}
+  50%{transform:translateY(-18px);}
+}
+
+/* Race Track */
+.raceTrack{
+  width:90%;
+  max-width:420px;
+  height:90px;
+  border:3px solid white;
+  border-radius:20px;
+  margin:25px auto;
+  position:relative;
+  overflow:hidden;
+}
+
+.raceCar{
+  position:absolute;
+  left:0;
+  top:20px;
+  width:60px;
+  transition:0.4s;
+}
+
+.finish{
+  position:absolute;
+  right:10px;
+  top:25px;
+  width:40px;
+}
+
+/* Fireworks */
 .firework{
   position:fixed;
-  width:12px; height:12px;
+  width:10px;
+  height:10px;
   border-radius:50%;
-  background:white;
-  animation:boom 1s infinite;
+  background:yellow;
+  animation:boom 1s ease-out forwards;
 }
-@keyframes boom{0%{transform:scale(0);}100%{transform:scale(6);opacity:0;}}
 
+@keyframes boom{
+  0%{transform:scale(0);opacity:1;}
+  100%{transform:scale(8);opacity:0;}
+}
+
+/* Hearts */
 .heart{
   position:fixed;
-  font-size:25px;
-  animation:fall linear infinite;
+  width:25px;
+  animation:fall 4s linear forwards;
 }
-@keyframes fall{0%{top:-50px;}100%{top:100vh;}}
 
-/* Responsive */
-@media(max-width:480px){
-  h1{ font-size:1.5rem;}
-  p{ font-size:0.9rem;}
-  .cake{ width:120px; height:90px;}
-  .candle{top:-35px; left:55px; height:25px;}
-  .flame{width:10px;height:10px;top:-10px;left:-2px;}
-  .balloon{width:40px; height:50px;}
-  .envelope{width:120px; height:80px;}
+@keyframes fall{
+  0%{top:-40px;opacity:1;}
+  100%{top:110vh;opacity:0;}
+}
+
+/* Speedometer */
+#speedometer{
+  width:220px;
+  height:220px;
+  border-radius:50%;
+  border:8px solid white;
+  margin:25px auto;
+  position:relative;
+  background:black;
+  box-shadow:0 0 25px cyan;
+}
+
+#needle{
+  width:4px;
+  height:90px;
+  background:red;
+  position:absolute;
+  left:50%;
+  top:50%;
+  transform-origin:bottom;
+  transform:rotate(-90deg);
+}
+
+#digitalSpeed{
+  font-size:28px;
+  margin-top:12px;
+  font-family:monospace;
+  color:cyan;
 }
 </style>
 </head>
+
 <body>
-<div class="app">
 
-<!-- Screen 1: Intro -->
-<div class="screen active" id="s1">
-  <h1>Hey Aradhya! 👋</h1>
-  <p>Guess what… today is YOUR day 🎉</p>
-  <button class="btn" onclick="go(2)">Next →</button>
+<!-- Online Happy Birthday Tune -->
+<audio id="song" src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthday.wav"></audio>
+
+<!-- PAGE 1 -->
+<div class="page active" id="page1">
+  <h1>BMW Birthday Gift</h1>
+  <h1>Aradhya ❤️</h1>
+  <p>Tap the Gift to Start 🚗</p>
+
+  <!-- Gift Online Image -->
+  <img class="giftImg"
+  src="https://cdn-icons-png.flaticon.com/512/4213/4213958.png"
+  onclick="nextPage(2)">
 </div>
 
-<!-- Screen 2: Cake -->
-<div class="screen" id="s2">
-  <h1>Happy 15th Birthday 🎂</h1>
-  <div class="cake" onclick="blowCandle()">
-    <div class="candle" id="candle">
-      <div class="flame" id="flame"></div>
-    </div>
+<!-- PAGE 2 -->
+<div class="page" id="page2">
+  <h1>Surprise ✨</h1>
+  <p>You bring warmth and joy everywhere.</p>
+  <button onclick="nextPage(3)">Next ➝</button>
+</div>
+
+<!-- PAGE 3 -->
+<div class="page" id="page3">
+  <h1>🏁 Activity: Complete the Race</h1>
+  <p>Tap SPEED until finish!</p>
+
+  <div class="raceTrack">
+    <!-- Car Online Image -->
+    <img src="https://cdn-icons-png.flaticon.com/512/743/743988.png"
+    id="raceCar" class="raceCar">
+
+    <!-- Finish Flag Online -->
+    <img src="https://cdn-icons-png.flaticon.com/512/3123/3123856.png"
+    class="finish">
   </div>
-  <p>Tap the candle to blow it! ✨</p>
+
+  <button onclick="speedUp()">🚀 SPEED</button>
+  <p id="raceMsg"></p>
 </div>
 
-<!-- Screen 3: Balloon Pop -->
-<div class="screen" id="s3">
-  <h1>Pop the Balloons 🎈</h1>
-  <p>Click balloons to reveal hidden words!</p>
-</div>
+<!-- PAGE 4 FINAL -->
+<div class="page" id="page4">
+  <h1>🎁 Final Birthday Gift</h1>
+  <p>Happy Birthday Aradhya ❤️</p>
 
-<!-- Screen 4: Envelope Gift -->
-<div class="screen" id="s4">
-  <h1>Your Gift 🎁</h1>
-  <div class="envelope" id="envelope" onclick="openEnvelope()">
-    <p id="giftMessage">Happy Birthday Aradhya ❤️ You are amazing!</p>
+  <div id="speedometer">
+    <div id="needle"></div>
   </div>
-</div>
 
-<!-- Screen 5: Celebration -->
-<div class="screen" id="s5">
-  <h1>🎉 Celebrate! 🎉</h1>
-  <p>Enjoy your special day with love & joy ❤️</p>
-</div>
+  <div id="digitalSpeed">0 km/h</div>
 
-<!-- Music -->
-<audio id="bdaySong" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+  <p>
+    Today the world feels gentler because you arrived in it.  
+    May this year hold you softly and remind you again —  
+    that your existence is a gift.
+  </p>
 
+  <button onclick="celebrate()">🎆 Celebrate!</button>
 </div>
 
 <script>
-let currentScreen = 1;
-function go(n){
-  document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'));
-  document.getElementById('s'+n).classList.add('active');
-  currentScreen=n;
-  if(n===3) createBalloons();
-  if(n===5) startCelebration();
+let pos=0;
+
+function nextPage(n){
+  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+  document.getElementById("page"+n).classList.add("active");
 }
 
-// Candle blow
-function blowCandle(){
-  const flame = document.getElementById('flame');
-  flame.style.display='none';
-  setTimeout(()=>go(3),1000);
-}
+function speedUp(){
+  pos += 60;
+  document.getElementById("raceCar").style.left = pos+"px";
 
-// Balloons
-const balloonMessages = [
-  "Best Friend 💕","Always Smiling 😊","Kind Heart 💖","Dream Big ✨","Never Give Up 🌈"
-];
-function createBalloons(){
-  balloonMessages.forEach((msg,i)=>{
-    const b = document.createElement('div');
-    b.className='balloon';
-    b.style.left=Math.random()*70+10+'%';
-    b.style.background=`hsl(${Math.random()*360},70%,75%)`;
-    b.style.animationDuration=(6+Math.random()*4)+'s';
-    b.onclick = () => {
-      const w = document.createElement('div');
-      w.className='word';
-      w.innerText = msg;
-      w.style.left=b.style.left; w.style.top='40%';
-      document.body.appendChild(w);
-      b.remove();
-      if(document.querySelectorAll('.balloon').length===0) setTimeout(()=>go(4),1500);
-    };
-    document.body.appendChild(b);
-  });
-}
-
-// Envelope
-function openEnvelope(){
-  const env = document.getElementById('envelope');
-  env.classList.add('open');
-  env.querySelector('p').style.display='block';
-  setTimeout(()=>go(5),2000);
-}
-
-// Celebration Fireworks & Hearts
-function startCelebration(){
-  playSong();
-  for(let i=0;i<15;i++){
-    let fw=document.createElement('div');
-    fw.className='firework';
-    fw.style.top=Math.random()*window.innerHeight+'px';
-    fw.style.left=Math.random()*window.innerWidth+'px';
-    document.body.appendChild(fw);
-    setTimeout(()=>fw.remove(),2000);
-  }
-  for(let i=0;i<20;i++){
-    let heart=document.createElement('div');
-    heart.className='heart';
-    heart.innerHTML='❤️';
-    heart.style.left=Math.random()*window.innerWidth+'px';
-    heart.style.animationDuration=(3+Math.random()*3)+'s';
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),4000);
+  if(pos >= 300){
+    document.getElementById("raceMsg").innerText="🏆 Race Complete!";
+    setTimeout(()=>nextPage(4),1000);
   }
 }
 
-// Play music
-function playSong(){
-  const song = document.getElementById('bdaySong');
-  song.play();
+function celebrate(){
+  document.getElementById("song").play();
+  fireworks();
+  hearts();
+  speedometer();
+}
+
+function fireworks(){
+  for(let i=0;i<25;i++){
+    let f=document.createElement("div");
+    f.className="firework";
+    f.style.top=Math.random()*window.innerHeight+"px";
+    f.style.left=Math.random()*window.innerWidth+"px";
+    document.body.appendChild(f);
+    setTimeout(()=>f.remove(),1200);
+  }
+}
+
+function hearts(){
+  for(let i=0;i<25;i++){
+    let h=document.createElement("img");
+
+    /* Heart Online Image */
+    h.src="https://cdn-icons-png.flaticon.com/512/833/833472.png";
+
+    h.className="heart";
+    h.style.left=Math.random()*window.innerWidth+"px";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),4000);
+  }
+}
+
+function speedometer(){
+  let angle=-90;
+  let speed=0;
+  let needle=document.getElementById("needle");
+  let digital=document.getElementById("digitalSpeed");
+
+  let interval=setInterval(()=>{
+    angle += 10;
+    speed += 10;
+    needle.style.transform="rotate("+angle+"deg)";
+    digital.innerText=speed+" km/h";
+
+    if(angle>=90) clearInterval(interval);
+  },150);
 }
 </script>
+
 </body>
 </html>
