--- a/index.html
+++ b/index.html
@@ -1,284 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>BMW Birthday Gift</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday Aradhya</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Poppins",sans-serif;
+}
 
 body{
-  font-family:Poppins,sans-serif;
-  text-align:center;
-  color:white;
-  overflow-x:hidden;
-  background:linear-gradient(120deg,#000,#0011ff,#7a00ff);
-  background-size:400% 400%;
-  animation:bgMove 12s infinite alternate;
-}
-
-@keyframes bgMove{
-  0%{background-position:left;}
-  100%{background-position:right;}
-}
-
-.page{
-  display:none;
-  min-height:100vh;
-  padding:60px 15px;
-}
-
-.active{display:block;}
-
-h1{font-size:clamp(22px,5vw,40px);}
-p{font-size:clamp(14px,3vw,18px);opacity:0.9;}
-
-button{
-  padding:14px 18px;
-  margin:12px;
-  border:none;
-  border-radius:14px;
-  width:90%;
-  max-width:340px;
-  font-size:16px;
-  cursor:pointer;
-  background:rgba(255,255,255,0.2);
-  color:white;
-  border:2px solid white;
-}
-
-button:hover{
-  background:white;
-  color:black;
-}
-
-/* Gift Image */
-.giftImg{
-  width:110px;
-  margin:25px auto;
-  animation:bounce 1.5s infinite;
-  cursor:pointer;
-}
-
-@keyframes bounce{
-  0%,100%{transform:translateY(0);}
-  50%{transform:translateY(-18px);}
-}
-
-/* Race Track */
-.raceTrack{
-  width:90%;
-  max-width:420px;
-  height:90px;
-  border:3px solid white;
-  border-radius:20px;
-  margin:25px auto;
-  position:relative;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:linear-gradient(to bottom,#ffe6f2,#fff);
   overflow:hidden;
 }
 
-.raceCar{
-  position:absolute;
-  left:0;
-  top:20px;
-  width:60px;
-  transition:0.4s;
+.container{
+  width:100%;
+  max-width:430px;
+  height:100vh;
+  padding:25px;
+  text-align:center;
 }
 
-.finish{
-  position:absolute;
-  right:10px;
-  top:25px;
-  width:40px;
+.card{
+  margin-top:50px;
+  background:rgba(255,255,255,0.65);
+  border-radius:25px;
+  padding:30px 20px;
+  box-shadow:0 15px 40px rgba(0,0,0,0.15);
+  animation:fade 0.8s ease;
 }
 
-/* Fireworks */
-.firework{
-  position:fixed;
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:yellow;
-  animation:boom 1s ease-out forwards;
+h1{
+  font-size:2rem;
+  color:#b4005a;
+  margin-bottom:15px;
 }
 
-@keyframes boom{
-  0%{transform:scale(0);opacity:1;}
-  100%{transform:scale(8);opacity:0;}
+p{
+  font-size:1.05rem;
+  color:#444;
 }
 
-/* Hearts */
-.heart{
-  position:fixed;
-  width:25px;
-  animation:fall 4s linear forwards;
+.btn{
+  margin-top:25px;
+  padding:14px 30px;
+  border:none;
+  border-radius:30px;
+  background:#d45aa3;
+  color:white;
+  font-size:1rem;
+  cursor:pointer;
+  box-shadow:0 10px 25px rgba(212,90,163,0.3);
 }
 
-@keyframes fall{
-  0%{top:-40px;opacity:1;}
-  100%{top:110vh;opacity:0;}
+.btn:active{
+  transform:scale(0.95);
 }
 
-/* Speedometer */
-#speedometer{
-  width:220px;
-  height:220px;
-  border-radius:50%;
-  border:8px solid white;
-  margin:25px auto;
+.hidden{display:none;}
+
+@keyframes fade{
+  from{opacity:0;transform:scale(0.9);}
+  to{opacity:1;transform:scale(1);}
+}
+
+/* Loader */
+.loader-bar{
+  width:80%;
+  height:12px;
+  background:#f5cce3;
+  margin:20px auto;
+  border-radius:10px;
+  overflow:hidden;
+}
+
+.loader-fill{
+  height:100%;
+  width:0%;
+  background:#b4005a;
+  border-radius:10px;
+  animation:load 3s forwards;
+}
+
+@keyframes load{
+  to{width:100%;}
+}
+
+/* Cake Design */
+.cake{
+  width:180px;
+  margin:20px auto;
   position:relative;
-  background:black;
-  box-shadow:0 0 25px cyan;
 }
 
-#needle{
-  width:4px;
-  height:90px;
-  background:red;
+.layer{
+  height:55px;
+  border-radius:18px;
+  background:linear-gradient(#ff6aa9,#ff3f8e);
+  margin-top:10px;
+}
+
+.icing{
   position:absolute;
-  left:50%;
-  top:50%;
-  transform-origin:bottom;
-  transform:rotate(-90deg);
+  top:0;
+  width:100%;
+  height:50px;
+  background:#ffe9f5;
+  border-radius:18px;
 }
 
-#digitalSpeed{
-  font-size:28px;
-  margin-top:12px;
-  font-family:monospace;
-  color:cyan;
+.candle{
+  position:absolute;
+  top:-40px;
+  left:50%;
+  transform:translateX(-50%);
+  width:14px;
+  height:45px;
+  background:white;
+  border-radius:5px;
+}
+
+.flame{
+  width:16px;
+  height:16px;
+  background:orange;
+  border-radius:50%;
+  position:absolute;
+  top:-15px;
+  left:-1px;
+  animation:flicker 0.8s infinite alternate;
+}
+
+@keyframes flicker{
+  from{transform:scale(1);opacity:1;}
+  to{transform:scale(0.7);opacity:0.6;}
+}
+
+/* Balloons */
+.balloon-area{
+  display:flex;
+  justify-content:center;
+  gap:15px;
+  margin-top:25px;
+}
+
+.balloon{
+  width:65px;
+  height:85px;
+  border-radius:50%;
+  cursor:pointer;
+  position:relative;
+}
+
+.balloon::after{
+  content:"";
+  position:absolute;
+  width:2px;
+  height:40px;
+  background:#999;
+  bottom:-40px;
+  left:50%;
+}
+
+.pop{
+  animation:pop 0.4s forwards;
+}
+
+@keyframes pop{
+  to{transform:scale(0);opacity:0;}
+}
+
+/* Message Envelope */
+.envelope{
+  width:220px;
+  height:140px;
+  background:#ffb6d9;
+  margin:25px auto;
+  border-radius:15px;
+  position:relative;
+  cursor:pointer;
+}
+
+.envelope::before{
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:#ff8fc4;
+  clip-path:polygon(0 0,50% 55%,100% 0,100% 100%,0 100%);
+  border-radius:15px;
+}
+
+.letter{
+  position:absolute;
+  bottom:10px;
+  left:10px;
+  width:200px;
+  height:110px;
+  background:white;
+  border-radius:12px;
+  padding:15px;
+  font-size:0.9rem;
+  color:#444;
+  transform:translateY(80px);
+  transition:0.8s;
+}
+
+.envelope.open .letter{
+  transform:translateY(-20px);
 }
 </style>
 </head>
 
 <body>
 
-<!-- Online Happy Birthday Tune -->
-<audio id="song" src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthday.wav"></audio>
+<div class="container">
 
-<!-- PAGE 1 -->
-<div class="page active" id="page1">
-  <h1>BMW Birthday Gift</h1>
-  <h1>Aradhya ❤️</h1>
-  <p>Tap the Gift to Start 🚗</p>
+<!-- Music -->
+<audio id="music" loop>
+  <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthday.wav">
+</audio>
 
-  <!-- Gift Online Image -->
-  <img class="giftImg"
-  src="https://cdn-icons-png.flaticon.com/512/4213/4213958.png"
-  onclick="nextPage(2)">
-</div>
+<!-- Page 1 Loader -->
+<div class="card" id="page1">
+  <h1>Loading your birthday surprise...</h1>
+  <div style="font-size:50px;">🎂</div>
 
-<!-- PAGE 2 -->
-<div class="page" id="page2">
-  <h1>Surprise ✨</h1>
-  <p>You bring warmth and joy everywhere.</p>
-  <button onclick="nextPage(3)">Next ➝</button>
-</div>
-
-<!-- PAGE 3 -->
-<div class="page" id="page3">
-  <h1>🏁 Activity: Complete the Race</h1>
-  <p>Tap SPEED until finish!</p>
-
-  <div class="raceTrack">
-    <!-- Car Online Image -->
-    <img src="https://cdn-icons-png.flaticon.com/512/743/743988.png"
-    id="raceCar" class="raceCar">
-
-    <!-- Finish Flag Online -->
-    <img src="https://cdn-icons-png.flaticon.com/512/3123/3123856.png"
-    class="finish">
+  <div class="loader-bar">
+    <div class="loader-fill"></div>
   </div>
 
-  <button onclick="speedUp()">🚀 SPEED</button>
-  <p id="raceMsg"></p>
+  <p>Please wait...</p>
 </div>
 
-<!-- PAGE 4 FINAL -->
-<div class="page" id="page4">
-  <h1>🎁 Final Birthday Gift</h1>
-  <p>Happy Birthday Aradhya ❤️</p>
+<!-- Page 2 Intro -->
+<div class="card hidden" id="page2">
+  <h1>A Cutiepie was born today!</h1>
+  <p>Yes Aradhya... it's YOU 💖</p>
+  <button class="btn" onclick="nextPage(3)">Start the Surprise →</button>
+</div>
 
-  <div id="speedometer">
-    <div id="needle"></div>
+<!-- Page 3 Cake -->
+<div class="card hidden" id="page3">
+  <h1>Happy Birthday Aradhya!</h1>
+
+  <div class="cake">
+    <div class="icing"></div>
+    <div class="candle"><div class="flame"></div></div>
+    <div class="layer"></div>
+    <div class="layer"></div>
   </div>
 
-  <div id="digitalSpeed">0 km/h</div>
+  <p>Make a wish before popping balloons 🎈</p>
+  <button class="btn" onclick="nextPage(4)">Pop the Balloons →</button>
+</div>
 
-  <p>
-    Today the world feels gentler because you arrived in it.  
-    May this year hold you softly and remind you again —  
-    that your existence is a gift.
-  </p>
+<!-- Page 4 Balloons -->
+<div class="card hidden" id="page4">
+  <h1>Pop all 4 balloons 🎈</h1>
 
-  <button onclick="celebrate()">🎆 Celebrate!</button>
+  <div class="balloon-area">
+    <div class="balloon" style="background:#ff9fc9" onclick="popBalloon(this)"></div>
+    <div class="balloon" style="background:#ffd1e8" onclick="popBalloon(this)"></div>
+    <div class="balloon" style="background:#ffc2dd" onclick="popBalloon(this)"></div>
+    <div class="balloon" style="background:#d7b3ff" onclick="popBalloon(this)"></div>
+  </div>
+
+  <button class="btn hidden" id="balloonNext" onclick="nextPage(5)">
+    Next → Special Message
+  </button>
+</div>
+
+<!-- Page 5 Envelope Message -->
+<div class="card hidden" id="page5">
+  <h1>A Special Message 💌</h1>
+  <p>Tap the envelope to open</p>
+
+  <div class="envelope" onclick="openEnvelope()">
+    <div class="letter">
+      <b>Aradhya,</b><br><br>
+      Today the world feels gentler because you arrived in it.<br><br>
+      May this new year hold you softly, return your kindness,
+      and remind you again and again that your existence is a gift.<br><br>
+      Happy Birthday 💖
+    </div>
+  </div>
+
+</div>
+
 </div>
 
 <script>
-let pos=0;
+let popped = 0;
 
+/* Auto loader */
+setTimeout(()=>{
+  nextPage(2);
+},3200);
+
+/* Page switch */
 function nextPage(n){
-  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
-  document.getElementById("page"+n).classList.add("active");
-}
+  document.querySelectorAll(".card").forEach(p=>p.classList.add("hidden"));
+  document.getElementById("page"+n).classList.remove("hidden");
 
-function speedUp(){
-  pos += 60;
-  document.getElementById("raceCar").style.left = pos+"px";
-
-  if(pos >= 300){
-    document.getElementById("raceMsg").innerText="🏆 Race Complete!";
-    setTimeout(()=>nextPage(4),1000);
+  if(n===3){
+    document.getElementById("music").play();
   }
 }
 
-function celebrate(){
-  document.getElementById("song").play();
-  fireworks();
-  hearts();
-  speedometer();
-}
+/* Balloon Pop */
+function popBalloon(balloon){
+  if(balloon.classList.contains("pop")) return;
+  balloon.classList.add("pop");
+  popped++;
 
-function fireworks(){
-  for(let i=0;i<25;i++){
-    let f=document.createElement("div");
-    f.className="firework";
-    f.style.top=Math.random()*window.innerHeight+"px";
-    f.style.left=Math.random()*window.innerWidth+"px";
-    document.body.appendChild(f);
-    setTimeout(()=>f.remove(),1200);
+  if(popped===4){
+    document.getElementById("balloonNext").classList.remove("hidden");
   }
 }
 
-function hearts(){
-  for(let i=0;i<25;i++){
-    let h=document.createElement("img");
-
-    /* Heart Online Image */
-    h.src="https://cdn-icons-png.flaticon.com/512/833/833472.png";
-
-    h.className="heart";
-    h.style.left=Math.random()*window.innerWidth+"px";
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),4000);
-  }
-}
-
-function speedometer(){
-  let angle=-90;
-  let speed=0;
-  let needle=document.getElementById("needle");
-  let digital=document.getElementById("digitalSpeed");
-
-  let interval=setInterval(()=>{
-    angle += 10;
-    speed += 10;
-    needle.style.transform="rotate("+angle+"deg)";
-    digital.innerText=speed+" km/h";
-
-    if(angle>=90) clearInterval(interval);
-  },150);
+/* Envelope */
+function openEnvelope(){
+  document.querySelector(".envelope").classList.toggle("open");
 }
 </script>
 
